--- a/yim_dao/pom.xml
+++ b/yim_dao/pom.xml
@@ -44,6 +44,13 @@
            <artifactId>mysql-connector-java</artifactId>
        </dependency>
 
+       <dependency>
+           <groupId>org.projectlombok</groupId>
+           <artifactId>lombok</artifactId>
+           <version>1.16.18</version>
+           <scope>provided</scope>
+       </dependency>
+
     </dependencies>
 
 
