--- a/yim_service/pom.xml
+++ b/yim_service/pom.xml
@@ -30,10 +30,18 @@
             <scope>test</scope>
         </dependency>
 
+
+
         <dependency>
             <groupId>top.learn</groupId>
             <artifactId>yim_dao</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>5.1.4.RELEASE</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
